사용자 정보 수정시에 사용자 랭킹도 수정되는 오류 (#102)
* fix: modify to query rank and score from Redis at once

* refactor: create DTO to return user and ranking information, modifying to only deliver necessary information