@@ -1,6 +1,7 @@
 package com.codingbottle.redis.domain.quiz.service;
 
-import com.codingbottle.redis.domain.quiz.model.QuizRankUserData;
+import com.codingbottle.redis.domain.quiz.model.UserInfo;
+import com.codingbottle.redis.domain.quiz.model.RankInfo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ZSetOperations;
@@ -10,7 +11,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -19,51 +19,59 @@ public class QuizRankRedisService {
     private final RedisTemplate<Object,Object> quizRankRedisTemplate;
     private static final String QUIZ_RANK_KEY = "QUIZ_RANK";
 
-    public int getScore(QuizRankUserData user) {
+    public int getScore(UserInfo user) {
         Double score = quizRankRedisTemplate.opsForZSet().score(QUIZ_RANK_KEY, user);
         return getScoreAnInt(Optional.ofNullable(score));
     }
 
-    public void addScore(QuizRankUserData user, int score) {
+    public void addScore(UserInfo user, int score) {
         quizRankRedisTemplate.opsForZSet().add(QUIZ_RANK_KEY, user, score);
     }
 
-    public void updateScore(QuizRankUserData user, int score) {
+    public void updateScore(UserInfo user, int score) {
         int newScore = getScore(user) + score;
         addScore(user, newScore);
     }
 
-    public List<QuizRankUserData> getUsersRank() {
+    public List<UserInfo> getUsersRank() {
         Set<ZSetOperations.TypedTuple<Object>> rankSet = quizRankRedisTemplate.opsForZSet().reverseRangeWithScores(QUIZ_RANK_KEY, 0, 3);
         Objects.requireNonNull(rankSet);
 
         return rankSet.stream()
                 .map(this::convertToUserScore)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private void remove(QuizRankUserData user) {
-        quizRankRedisTemplate.opsForZSet().remove(QUIZ_RANK_KEY, user);
-    }
-
-    public int removeUserWithScore(QuizRankUserData user) {
+    public int removeUserWithScore(UserInfo user) {
         int score = getScore(user);
         remove(user);
         return score;
+    }
+
+    public RankInfo getRankInfo(UserInfo user) {
+        Long rank = getRank(user);
+        int score = getScore(user);
+
+        if (rank == null || score == 0) {
+            return RankInfo.of(0, score);
+        }
+        return RankInfo.of(rank + 1, score);
+    }
+
+    private void remove(UserInfo user) {
+        quizRankRedisTemplate.opsForZSet().remove(QUIZ_RANK_KEY, user);
     }
 
     private static int getScoreAnInt(Optional<Double> score) {
         return score.orElse(0.0).intValue();
     }
 
-    private QuizRankUserData convertToUserScore(ZSetOperations.TypedTuple<Object> rank) {
-        return(QuizRankUserData) rank.getValue();
+    private UserInfo convertToUserScore(ZSetOperations.TypedTuple<Object> rank) {
+        return (UserInfo) rank.getValue();
     }
 
-
-    public long getRank(QuizRankUserData user) {
-        long rank = Optional.ofNullable(quizRankRedisTemplate.opsForZSet().rank(QUIZ_RANK_KEY, user)).orElse(-1L);
-        return rank + 1;
+    private Long getRank(UserInfo user) {
+        return quizRankRedisTemplate.opsForZSet().reverseRank(QUIZ_RANK_KEY, user);
     }
 }
 
